# Shocker-Agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  agent.py  deepgram.py  deepgram_stt.py  elevenlabs_tts.py  events.py  main.py  package.json  prompts.py  pyproject.toml  settings.py  test.py
Database/: mongo.py
misc/: sample_jd.py
web/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: types.ts  utils.ts  websocket.ts
web/src/lib/audio/: capture.ts  index.ts  playback.ts
web/src/lib/components/: ActivityFeed.svelte  AudioVisualizer.svelte  Console.svelte  Controls.svelte  Feedback.svelte  Header.svelte  LatencyWaterfall.svelte  Pipeline.svelte  PipelineCard.svelte  index.ts
web/src/lib/stores/: Job_desc.ts  activity.ts  index.ts  pipeline.ts  resume.ts  session.ts
