[tool.poetry]
name = "shocker agent"
version = "0.1.0"
description = ""
authors = ["Shocker <donaldesset04@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sounddevice = "^0.5.3"
soundfile = "^0.13.1"
dotenv = "^0.9.9"
langgraph = "^1.0.6"
langchain = "^1.2.6"
langchain-anthropic = "^1.3.1"
langchain-openai = "^1.1.7"
pydantic-settings = "^2.12.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
loguru = "^0.7.3"
langchain-google-genai = "^4.2.0"
langchain-google-vertexai = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
